# CO2-indoor-anomaly-detection

./: .gitignore  LICENSE  README.md
datasets/semisupervised/: test_data.csv  test_data_labels.csv  test_data_norm.csv  val_data.csv
datasets/unsupervised/: test_data.csv  test_data_labels.csv  test_data_norm.csv  train_data.csv
models/: LSTM_model.h5  LSTM_model.json  model_autoencoder.tflite  oc_svm.pkl
src/anomaly_detection_app/: CMakeLists.txt  Makefile  README.md  esp_http_client_test.py  sdkconfig
src/anomaly_detection_app/main/: CMakeLists.txt  input_data.h  input_norm_data.h  main.cc  model.cc  model.h
src/esp_http_client/: sdkconfig.old
src/esp_http_client/main/: CMakeLists.txt  main.cc  model.cc
src/jupyter/: models.html  models.ipynb
src/load_test/: load_test_isolation_forest.py  load_test_lstm_cloud.py  load_test_lstm_standalone.py  load_test_oc_svm.py
src/server/: README.md  charts_database.db  main.py  monitor.py
src/server/static/: LSTM_model.h5  LSTM_model.json  index.html  scaler.save
